# dnd-discord-bot

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  app.js  commands.js  docker-compose.yml  package-lock.json  package.json  utils.js
src/: main.rs
src/commands/: echo.rs  test.rs
