[package]
name = "dnd-discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
serenity = { version="0.10.8", default-features = false, features = ["utils","client", "gateway", "rustls_backend", "model", "unstable_discord_api"]}
tokio = { version="1.0",features = ["macros", "rt-multi-thread"]}